# fpm-py-docs

./: docusaurus.config.js  package-lock.json  package.json
.github/workflows/: gh-pages.yml  jekyll-gh-pages.yml
docs/: docusaurus.config.js  intro.md  package.json  sidebars.js
docs/.github/workflows/: jekyll-gh-pages.yml
docs/docs/: intro.md
docs/docs/reference/: 0_intro.md  1_algorithm.md  algorithm.md
docs/guide/: 0_how-to-use.md  0_what_is.md  1_introduction.md  2_installation.md  3_usage.md  4_datasets.md  5_creating.md  6_parallelism.md  7_reconstruct.md  8_terminators.md  9_optimizers.md
docs/reference/: 0_intro.md  algorithm.md  data.md  iteration_terminators.md  optimizers.md  utils.md
python/: pyproject.toml  test.py
src/components/HomepageFeatures/: index.js
src/css/: custom.css
src/pages/: index.js  index.module.css
